Fix jumping scrollbar issue - at least in chrome

--- a/css/site.css
+++ b/css/site.css
@@ -5,6 +5,11 @@
 
 /* Write your styles below this line. */
 
+html
+{
+    overflow-y:overlay;
+}
+
 /* Write your styles above this line. */
 
 @tailwind utilities;
